karl package Changelog
======================

3.97 (2012-09-14)
-----------------

- Integrate with the perfmetrics package to start sending performance metrics
  to statsd/graphite.

- Fixed problem where a link inside a button on feeds would not work on some
  browsers.

- Added a layout for intranets with left navigation.

- Add globalization for dates in calendar portlets.

- Add correct Office 2010 format mime types to multiupload.

- Corrected typo that prevent email icon from showing up in people directory.

- Fixed problem where javascript actions would not work in people directory.

- Add rss and email icoins to blog view.

- make tag portlet label use the correct name or my tags, depending on
  viewed profile.

- Added labels with filter type to edit filter forms in people directory.

- Added padding to .contentWrapper when .noSectionMenu

- Fix imagedrawer to work on IE. The file upload was hanging with spinner
  stuck forever. I applied a 'trivial' fix in ajaxfileupload.js.
  In fact I wonder why the previous code used to work on IE at all... 
  In any case, the iframe creation code is now cleaned. (LP #1046900)

- Fixed calendar toolbar buttons wrapping under ie8

- Fixed calendar setup option alignment

- Applied new skin to  not found view

- Fixed offices footer wrapping bug under ie9

- Removed ux2 site annoucement animation

- Make sure affiliates can see All/Active communities widget. (LP #1037761)

- Added new pushdown feature for profile details and quick links.

3.96 (2012-09-06)
-----------------

- Return a 405 Method Not Allowed response to all OPTIONS and PROPFIND requests.
  (LP #1046967)

- Make sure all filters are reset on advanced search form when performing
  a new query from the main text box on the page.

- Fixed proportions on the "Very Wide Desktop" UX2 layout (LP #1042328)

- Add multiple file download feature, allowing users to select one or
  more files from the show folder view and get a zip file with them.
