@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Fix date format (US / EU) in the date column of the wiki index. Both ux1
+  and ux2. (LP #1051243)
+
 3.97 (2012-09-14)
 -----------------
 
